--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@google/generative-ai": "^0.17.0"
+		"@google/generative-ai": "^0.17.0",
+		"svelte-markdown": "^0.4.1"
 	}
 }
