Used Socket.io to pass Streaming data from backend to frontend using websockets.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
 	"type": "module",
 	"dependencies": {
 		"@google/generative-ai": "^0.17.0",
+		"socket.io-client": "^4.7.5",
 		"svelte-markdown": "^0.4.1"
 	}
 }
