--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,21 +1,65 @@
-node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Output
-.output
-.vercel
-/.svelte-kit
-/build
+# Dependency directories
+node_modules/
+jspm_packages/
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Env
+# Environment variables
 .env
-.env.*
-!.env.example
-!.env.test
+.env.local
+.env.*.local
 
-# Vite
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+# Production build
+/dist/
+/build/
+/public/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# SvelteKit or Next.js build outputs
+.svelte-kit/
+.next/
+
+# Svelte or React build outputs
+/.svelte/
+.out/
+.vite/
+.cache/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# IDE files
+.vscode/
+.idea/
+.DS_Store
+
+# Test coverage output
+coverage/
+
+# Build artifacts
+*.tgz
+*.gz
+*.zip
+
+# OS-specific files
+Thumbs.db
+Desktop.ini
+.DS_Store
+
+# Miscellaneous
+*.bak
+*.swp
+*.lock
